# CG_Arena

./: .gitignore  .gitmodules  Arena.cpp  Arena_original.cpp  CG.cpp  CG.h  CMakeLists.txt  LICENSE  README.md  main.cpp
CG/game/: Action.h  Deck.h  Game.h  Player.h  Recipe.h  Referee.h  Spell.h
CG_Arena/src/: application.cpp  main.cpp
CG_Game/: CG_Game.cpp  CG_Game.hpp
CG_Game/src/: CG_Game.cpp  CG_Game.hpp  CMakeLists.txt
src/: application.cpp  application.hpp  main.cpp
